# py_practice

./: .gitignore  1.py  P2_qqxgyq.py  P3_db_data_comp.py  P4_wstest4.py  T_OFFER_INST_RECORD_pb2.py  TestWS.py  TestWS.py.bak  ZSmartMigrationEnterpriseServer.py  data.csv  data_zhujian_baidu.xlsx  mi.py  payload  qmdbtest.py  test_stringformat.py  testpinyin.py  ws.txt
GEO二期复机外挂-朱钱树/: do_active_billing_one_uat.py  do_active_for_credit_check_payment_uat.py
a_cjx/: coronavirus_report_2020-09-17.xlsx
a_zqs/: zhuqianshu.py
dmcust_pb/: CMakeLists.txt  T_ACCNBR_SUBS_RELA_RECORD.proto  T_ACCT_ATTR_VALUE_RECORD.proto  T_ACCT_RECORD.proto  T_BAL_SHARE_RECORD.proto  T_BC_MEMBER_RECORD.proto  T_BC_POOL_RECORD.proto  T_BILL_OFFER_INST_BAL_SHARE_HIS_RECORD.proto  T_BLOCK_REASON_RECORD.proto  T_CC_ACCT_RECORD.proto  T_CC_SUBS_RECORD.proto  T_CHARGING_CONFIG_ITEM_RECORD.proto  T_CONTRACT_ITEM_RECORD.proto  T_CUST_ATTR_VALUE_RECORD.proto  T_CUST_RECORD.proto  T_FELLOW_NBR_RECORD.proto  T_GEO_HOME_ZONE_RECORD.proto  T_IMSI_SUBS_RELA_RECORD.proto  T_NP_DB_RECORD.proto  T_OFFER_INST_ATTR_RECORD.proto  T_OFFER_OBJ_INST_REL_FUNC_RECORD.proto  T_OFFER_OBJ_INST_REL_RECORD.proto  T_PROD_ATTR_RECORD.proto  T_PROD_INST_FUNC_RECORD.proto  T_PROD_INST_RECORD.proto  T_PROD_INST_REL_RECORD.proto  T_SUBS_REL_RECORD.proto
py_task/: P1_getweather.py  P2_qqxgyq.py  P3_db_data_comp.py  P4_wstest4.py  P5_ADDCUST.py  P6_Zcache.py  T_OFFER_INST_RECORD.proto  T_OFFER_INST_RECORD_pb2.py  data.xlsx  dingdingautomsg.py
qmdb/: TQMDBCSQuery.cpp  TQmdbInterfaceAdapter.cpp  TTTDBCSQuery.cpp  debug_new.cpp
(+128 files in other folders)
